# Common_cpp_Common

./: .gitignore  .hgignore  Activate_custom.py  Readme.rst  Setup_custom.py  Setup_epilogue.py  __RepositoryId__  _custom_data.py
Libraries/Python/CommonCppCommon/v1.0/CommonCppCommon/clang_formatAndBrown/: __init__.py
Libraries/Python/CommonCppCommon/v1.0/CommonCppCommon/clang_formatAndBrown/Plugins/: ClosingBracketNewlinePlugin.py  DebugPlugin.py  __init__.py
Libraries/Python/CppCommon/v1.0/CppCommon/: TestExecutorImpl.py
Libraries/Python/CppCommon/v1.0/CppCommon/CodeCoverageExecutor/: __init__.py
Libraries/Python/CppCommon/v1.0/CppCommon/CodeCoverageFilter/: CodeCoverageFilter.SimpleSchema  __init__.py
Libraries/Python/CppCommon/v1.0/CppCommon/CodeCoverageFilter/BuildEnvironment/: Build.py  Setup.cmd  Setup.sh  Setup_custom.py  __RepositoryId__
Libraries/Python/CppCommon/v1.0/CppCommon/CodeCoverageFilter/GeneratedCode/: CodeCoverageFilter_PythonYamlSerialization.py
Libraries/cmake/CommonCppCommon/v1.0/: CppCommon.cmake  cpp_common.cmake
Libraries/cmake/CppCommon/v1.0/: BuildHelpers.cmake  Clang_compiler.cmake  Clang_compiler_common.cmake  Clang_linker.cmake  Clang_linker_common.cmake  CppCommon.cmake  GenerateFileAttributes.cmake  MSVC_compiler.cmake
Libraries/cmake/CppCommon/v1.0/Compilers/: Clang_compiler.cmake  Clang_compiler_common.cmake  Clang_linker.cmake  Clang_linker_common.cmake  GCC_compiler.cmake  GCC_linker.cmake  MSVC_compiler.cmake  MSVC_linker.cmake
Libraries/cmake/CppCommon/v1.0/FileAttributes/: FileAttributes.in.h
Scripts/: CMakeHelpers.py  Doxygener.py  clang-formatAndBrown.py
Scripts/Compilers/: CMakeCompiler.py
Scripts/Formatters/: CppFormatter.py
Scripts/Formatters/CppFormatterImpl/: ClosingBracketNewlinePlugin.py  DebugPlugin.py  __init__.py
Scripts/TestParsers/: CMakeTestParser.py  Catch2TestParser.py
Templates/: CMakeLists.txt  Template.doxygen  code_coverage.yaml
Templates/cmake/: CMakeLists.txt
Templates/cmake/cmake/: GenerateFileAttributes.cmake
Tools/cmake/v3.13.4/customizations/: FindBoost.cmake
Tools/graphviz/: build_linux.sh
Tools/ninja/v1.9.0/BSD/: Install.7z
Tools/ninja/v1.9.0/Linux/: Install.7z
Tools/ninja/v1.9.0/Windows/: Install.7z  Readme.rst
src/CmakeLocalEndToEndTestsImpl/: CMake_LocalEndToEndTest.template.py  shared_exe.cpp
src/CmakeLocalEndToEndTestsImpl/exe/: CMakeLists.txt  exe.cpp
src/CmakeLocalEndToEndTestsImpl/exe/cmake/: GenerateFileAttributes.cmake
src/CmakeLocalEndToEndTestsImpl/lib/: lib.cmake
src/CmakeLocalEndToEndTestsImpl/shared/: shared.cmake  shared.cpp  shared.h
src/CmakeLocalEndToEndTestsImpl/shared/cmake/: FileAttributes.in.h
src/CmakeLocalEndToEndTestsImpl/shared_exe/: CMakeLists.txt
src/CmakeLocalEndToEndTestsImpl/shared_exe/cmake/: FileAttributes.in.h  GenerateFileAttributes.cmake
src/CmakeLocalEndToEndTestsImpl/standard/exe/: CMakeLists.txt
src/CmakeLocalEndToEndTestsImpl/standard/lib/: CMakeLists.txt  lib.cmake
src/CmakeLocalEndToEndTestsImpl/standard/shared/: CMakeLists.txt  shared.cmake
src/CmakeLocalEndToEndTestsImpl/standard/shared_exe/: CMakeLists.txt
src/clang-formatProxy/: Build.py  clang-formatProxy.py
templates/: .clang-format  CMakeLists.txt
